# uefi-from-scratch

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/: build
.github/workflows/: build.yml
emulated-firmware/: OVMF.fd
esp/efi/boot/: bootx64.efi
github/workflows/: build.yml
src/: enum.rs  lib.rs  main.rs
